
  is raised now.

Extension modules
-----------------

- weakref.proxy() can now handle "del obj[i]" for proxy objects
  defining __delitem__.  Formerly, it generated a SystemError.

- SSL no longer crashes the interpreter when the remote side disconnects.

- time.strptime now exclusively uses the Python implementation
  contained within the _strptime module.

Library
-------

- Closing a dumbdbm database more than once is now harmless (it used to
  raise a nuisance exception on the second close).

- It's vital that a dumbdbm database be closed properly, else the
  on-disk data and directory files can be left in mutually inconsistent
  states.  dumbdbm.py's _Database.__del__() method attempted to close
  the database properly, but a shutdown race in _Database._commit()
  could prevent this from working, so that a program trusting __del__()
  to get the on-disk files in synch could be badly surprised.  The race
  has been repaired.

- The classes in threading.py are now new-style classes.  That they
  weren't before was an oversight.

- SF bug 763023: fix uncaught ZeroDivisionError in difflib ratio methods
  when there are no lines.

- SF bug 763637: fix exception in Tkinter with after_cancel
  which could occur with Tk 8.4

Tools/Demos
-----------

- SF bug 753592: webchecker/wsgui now handles user supplied directories.

Build
-----

C API
-----

Windows
-------

Mac
---


What's New in Python 2.3 beta 2?
================================

*Release date: 29-Jun-2003*

Core and builtins
-----------------

- A program can now set the environment variable PYTHONINSPECT to some
  string value in Python, and cause the interpreter to enter the
  interactive prompt at program exit, as if Python had been invoked
  with the -i option.

- list.index() now accepts optional start and stop arguments.  Similar
  changes were made to UserList.index(). SF feature request 754014.

- SF patch 751998 fixes an unwanted side effect of the previous fix